[package]
name = "terragrunt-apply"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — typed terragrunt plan/apply/destroy with structured outputs"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/terragrunt-apply"

[[bin]]
name = "terragrunt-apply"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"
